@@ -1,4 +1,0 @@
-<!entity spacecont.sgml system "spacecont.sgml">
-<!entity spacemeta.sgml system "spacemeta.sgml">
-<!entity space00.sgml system "space00.sgml">
-<!entity spacepages.sgml system "spacepages.sgml">
