@@ -1,0 +1,4 @@
+<!entity spacecont.sgml system "@srcdir@/spacecont.sgml">
+<!entity spacemeta.sgml system "@srcdir@/spacemeta.sgml">
+<!entity space00.sgml system "@srcdir@/space00.sgml">
+<!entity spacepages.sgml system "spacepages.sgml">
